feat: MCP server health monitoring with auto-repair (#395)
* feat: add MCP server health monitoring with auto-repair and status display

Surface MCP server health in daemon status, CLI output, and TUI status panel.
McpClientManager now tracks per-server errors, auto-reconnects failed servers
with a 30s cooldown, and exposes a detailed ServerHealth snapshot. The health.status
RPC endpoint includes MCP summary data, and the TUI polls it to show live
connection state with per-server drill-down.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: non-blocking MCP health, ToolRegistry sync on reconnect, and tests

- serverHealth()/serverStatus() now return cached state; a background virtual
  thread refreshes health and auto-repairs failed servers periodically
- Add ToolRegistry.unregister() and wire onToolRemoved callback so reconnect
  removes stale tools from the daemon registry
- Add McpClientManager package-private ClientFactory for testability
- Add McpClientManagerTest covering: start/bridge, failure recording, cooldown,
  tool cleanup on reconnect, reconnect failure, ping status update, close

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: address reviewer feedback — non-blocking poll, snapshot safety, cooldown, ANSI sanitization

- Move pollMcpStatus() from render path to background status-ticker thread
  using a dedicated DaemonConnection (prevents UI freeze on slow health RPC)
- bridgedTools() returns List.copyOf snapshot instead of unmodifiableList
  wrapper (prevents ConcurrentModificationException during reconnect)
- Record lastReconnectAttemptMillis on initial startup failure so the first
  background refresh honors the 30s cooldown instead of retrying immediately
- Sanitize server name and status via normalizeStatusPanelField() before
  ANSI rendering to prevent escape sequence injection in the TUI panel

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: lock-free health re